# ecgc-util

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
ecgc_util/: __main__.py  debugger_exception.py  ecgc_dump.py  ecgc_spi_programmer.py  ecgc_upload.py  spi_debug.py  spi_debugger.py  spi_programmer.py  uart_debugger.py  util.py
src/: ecgc_upload.py  exception_debugging.py
src/ecgc_util/: ecgc_debug.py  ecgc_debugger.py  ecgc_dump.py  ecgc_upload.py  sd.py  spi_debugger.py  uart_debugger.py  util.py
tests/: ecgc_upload_test.py  spi_debug_test.py  spi_debugger_test.py  spi_programmer_test.py  uart_debugger_test.py  util_test.py
