[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecgc-debug-util"
version = "0.0.1"
authors = [
  { name="Elijah Almeida Coimbra", email="ealmeidacoimbra@gmail.com" },
]
description = "Debug utility for development with the ecgc Gameboy cartridge"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"