[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecgc-util"
version = "0.0.1"
authors = [
    { name="Elijah Almeida Coimbra", email="ealmeidacoimbra@gmail.com" },
]
description = "Utility scripts for development with the ecgc Gameboy cartridge"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyserial>=3.5",
]

[project.scripts]
ecgc-upload = "ecgc_util.ecgc_upload:main_cli"

# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"